@@ -56,7 +56,8 @@ TEST_PROGS = getfsent
 
 EXTRA_PROGRAMS =	$(TEST_PROGS)
 
-CLEANFILES += *.test.c
+CLEANFILES += *.test.c $(SCRIPTS_PERL) $(SCRIPTS_SHELL)
+DISTCLEANFILES = config.log
 
 
 sendbackup_SOURCES = 	sendbackup.c		sendbackup.h	  \
